# RampNet

./: .gitignore  CLAUDE.md  LICENSE  README.md  download_dataset.py  environment.lock.yml  environment.yml  hyak_qwen_runbook.sh  pyproject.toml  requirements-vlm.txt  requirements-win-cuda.txt  requirements.txt
benchmark/: README.md
docs/: data_provenance.md  detection_recall_analysis.md  eval_protocol_verification.html  model_comparison.md
manual_labels/: -AsFw9IWv8TcycKft1pnRg.txt  -DZgYpFGlilvQkCCTkJSOQ.txt  -UaEiKC62iZG5JaG6c6d0Q.txt  -daV70yVmSR2yR5C-1JiLg.txt  -f7RJhr0X4RF_fjC1FdiqQ.txt  -fD1PF3fh6zES9s9pIk5TQ.txt  -hkcTXhJtWXi2BoaHDWLXw.txt  -mKAMKQFbk5dN94xExyfUA.txt  -mLw4Y2Vg9BYcTxL1GrLFQ.txt  -oWI7Ry1a0p3IAOadOp1Gw.txt  -wzs19p7wzLjldNoVGloyA.txt  -y2vTlXTmvgcYqrWI_sfmw.txt  02jskP51aA6J-Qqy5NK88Q.txt  07-B5vywvi75iyzvEDWIcg.txt  0BULS9fmvV3ckNuw_Qbgyg.txt  0EvwbhGJWnKoxlpob4XVVw.txt  0JbiT9zHG-05OoUiMQ1SCg.txt  0cTZ-iB6FK07oQqnD8oarg.txt  0eLbOlE4LEMWXjgIiSh4HQ.txt  0mAk37jh_s9gfjoF56n2oA.txt  0mmRqpwLuxH3_oyITpRAZg.txt  0ok-c73rA1MVku32wQyz9g.txt  13MJxEYdghZgVG_1gC4KCQ.txt  15F2hww98985kgLCL8oE7Q.txt  1E3DF1gIwsAMOH5kn-0dAg.txt  1L0VDeqJ5r2vGwgl03ryKg.txt  1PLplgdCTbRL0VNP0uFM_A.txt  1k0cQKEs12LmTz7nGenMjg.txt  1rbattf2d2XS-koRjtuagQ.txt  1tBZChyyWwMCxXOTSchH1Q.txt  1yYJqeJdmVrqiwYXaIrIpg.txt  2DkJvyXVDXoK8MH5ek76YA.txt  2NgKmkIoU9nUwvjk6K5wtw.txt  2XI1BB8c8n11O97Lp4fu1A.txt  2XRoFykeWlbkdUDd-dEYiA.txt  2YS0mHeKpEsK0WVSYB-29w.txt  2im9GXy3ijXw1n8bGuIBeQ.txt  2nQzKT0Z_8IMh0QioGU3YA.txt  2vHScBLWv-Y8HTXGAxBbRw.txt  2yK3AfMKHEbnX2FWBLg3QQ.txt  (+753 more)
(+78 files in other folders)
