[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rampnet"
version = "1.1.0"
description = "Shared model, checkpoint-loading, and metrics code for the RampNet pipeline"
requires-python = ">=3.10"
# torch/timm are intentionally not declared: they come from the conda
# environment (see environment.yml) and pip must not try to reinstall them.
dependencies = []

[tool.setuptools]
packages = ["rampnet"]
